--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
 header label {
   padding-right: 20px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: #fff;
   cursor: pointer;
   display: none;
 }
@@ -59,12 +59,15 @@ header label {
 .cabecera__lista li a {
   font-size: 18px;
   padding: 15px 20px;
-  color: rgb(255, 255, 255);
+  color: #fff;
   display: block;
 }
+.cabecera__lista li:focus-within > ul, .cabecera__lista li:hover > ul {
+  display: initial;
+}
 .cabecera__lista li a:hover {
-  background: rgb(175, 0, 0);
-  color: white;
+  background: rgb(200, 2, 2);
+  color: #fff;
   text-align: center;
   width: 100%;
   transition: all 0.3s;
@@ -85,11 +88,6 @@ header label {
   top: 0;
 }
 
-.cabecera__lista li:focus-within > ul,
-.cabecera__lista li:hover > ul {
-  display: initial;
-}
-
 #menu-bar {
   display: none;
 }
@@ -101,12 +99,37 @@ header label {
   bottom: 4rem;
   left: 9%;
 }
+.carousel-caption h2 {
+  font-size: 2rem;
+  font-weight: 1000;
+  font-style: italic;
+  text-transform: uppercase;
+  color: rgb(200, 2, 2) !important;
+  padding: 1%;
+  width: 420px;
+  margin-bottom: 10rem;
+  margin-right: 5rem;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 15px;
+  border: rgb(200, 2, 2) 5px solid;
+}
+.carousel-caption h4 {
+  font-size: 1.5rem;
+  font-weight: 800;
+  font-style: italic;
+  text-transform: uppercase;
+  padding: 0.5rem;
+  color: #fff;
+}
+.carousel-caption img {
+  width: 17%;
+  margin-bottom: 7rem;
+}
 
 .carousel-item {
   height: 35rem;
   background-color: #777;
 }
-
 .carousel-item > img {
   z-index: 1;
   min-width: 1500px;
@@ -116,35 +139,6 @@ header label {
 
 .carousel-control-next, .carousel-control-prev {
   width: 9%;
-}
-
-.carousel-caption h2 {
-  font-size: 2rem;
-  color: rgb(200, 2, 2) !important;
-  padding: 1%;
-  width: 420px;
-  font-weight: 1000;
-  font-style: italic;
-  text-transform: uppercase;
-  margin-bottom: 10rem;
-  margin-right: 5rem;
-  background: rgba(0, 0, 0, 0.4);
-  border-radius: 15px;
-  border: rgb(175, 0, 0) 5px solid;
-}
-
-.carousel-caption h4 {
-  padding: 0.5rem;
-  font-weight: 800;
-  font-size: 1.5rem;
-  font-style: italic;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.carousel-caption img {
-  width: 17%;
-  margin-bottom: 7rem;
 }
 
 .carousel-indicators {
@@ -353,7 +347,7 @@ input:checked ~ .details {
   justify-content: center;
   padding: 1%;
   background: rgba(255, 0, 0, 0.7);
-  color: white;
+  color: #fff;
   font-size: 2.5vw;
 }
 
@@ -502,6 +496,11 @@ input:checked ~ .details {
   margin-bottom: 10px;
 }
 
+.flecha {
+  display: flex;
+  justify-content: end;
+}
+
 .containerp {
   border-style: solid;
   border-width: 1px 0px 0px 0px;
@@ -544,12 +543,12 @@ input:checked ~ .details {
   transition: all 0.3s;
 }
 
-.fa-facebook:hover {
-  color: #0c2698 !important;
-}
-
 .fa-instagram:hover {
   color: #e120e4;
+}
+
+.fa-facebook:hover {
+  color: #0c2698;
 }
 
 .fa-whatsapp:hover {
@@ -563,9 +562,8 @@ input:checked ~ .details {
   display: flex;
   justify-content: end;
 }
-
 .bi-arrow-up-circle-fill:hover {
-  color: rgb(255, 0, 0);
+  color: rgb(200, 2, 2);
   transform: translateY(-4px) scale(1.2);
   transition: all 0.5s;
 }
@@ -674,10 +672,6 @@ input:checked ~ .details {
     border-top: 1px solid rgba(255, 255, 255, 0.3);
     display: none;
   }
-  .cabecera__lista li a:hover,
-.cabecera__sublista li {
-    text-align: left;
-  }
   .cabecera__lista li {
     width: 100%;
     border-bottom: 3px solid rgba(255, 0, 0, 0.6);
@@ -714,17 +708,17 @@ input:checked ~ .details {
     margin-bottom: 3rem;
     width: 215px;
   }
-  .btn {
-    font-size: 0.7rem;
-    --bs-btn-padding-y: 0.2rem;
-    --bs-btn-padding-x: 0.8rem;
-  }
   .carousel-caption img {
     margin-bottom: 3rem;
   }
   .carousel-caption h4 {
     padding: 0rem;
     font-size: 0.6rem;
+  }
+  .btn {
+    font-size: 0.7rem;
+    --bs-btn-padding-y: 0.2rem;
+    --bs-btn-padding-x: 0.8rem;
   }
   /* automotores */
   .sectionIndex img {
