--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -1,13 +1,10 @@
-// @import 'variables';
-
 /* -------inicio Automotores------- */
 #automotores{
     padding: 50px 20px 0 20px;
   }
   .autos{
     gap: 20px;
-    display: flex;
-    justify-content: space-evenly;
+    @include flex(0, space-evenly,0);
     flex-wrap: wrap;
     position: relative;
     padding-top: 50px;
@@ -18,8 +15,8 @@
     font-size: 30px;
     color: $color-rojizo;
     font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
+    font-style: map-get($forma-de-texto , estilo-de-fuente );
+    text-transform: map-get($forma-de-texto , texto-transform );
   }
   .automotores{
     position: relative;
@@ -27,8 +24,8 @@
     font-size: 30px;
     color: $color-rojizo;
     font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
+    font-style: map-get($forma-de-texto , estilo-de-fuente );
+    text-transform: map-get($forma-de-texto , texto-transform );
     width: auto;
   }
   .linea{
@@ -128,8 +125,8 @@
     font-size: 30px;
     color: $color-rojizo;
     font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
+    font-style: map-get($forma-de-texto , estilo-de-fuente );
+    text-transform: map-get($forma-de-texto , texto-transform );
   }
   .lineacyp{
     position: relative;
@@ -174,11 +171,10 @@
     padding: 100px 20px 0 20px;
   }
   .llantasdiv h3{
-    display: flex;
-    justify-content:center;
+    @include flex(0, center,0);
     padding: 1%;
     background: $color-rojizo;
-    color: white;
+    color: $color-blanco;
     font-size: 2.5vw;
   }
   .llantasp{
@@ -187,8 +183,8 @@
     font-size: 30px;
     color: $color-rojizo;
     font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
+    font-style: map-get($forma-de-texto , estilo-de-fuente );
+    text-transform: map-get($forma-de-texto , texto-transform );
   }
   .lineallanta{
     position: relative;
@@ -201,9 +197,7 @@
     transition: all 1s ease;
   }
   .llantas__18{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    @include flexdir(wrap,column,1);
     padding: 2%;
     padding-bottom: 4%;
 
@@ -219,9 +213,7 @@
     }
   }
   .llantas__17{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    @include flexdir(wrap,row,1);
     padding: 2%;
     padding-bottom: 4%;
 
@@ -239,8 +231,7 @@
   }
 
   .llantas__16{
-    display: flex;
-    flex-wrap: wrap;
+    @include flexdir(wrap,0,0);
     gap: 20px;
     padding: 2%;
     padding-bottom: 0;
@@ -269,8 +260,8 @@
     font-size: 30px;
     color: $color-rojizo;
     font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
+    font-style: map-get($forma-de-texto , estilo-de-fuente );
+    text-transform: map-get($forma-de-texto , texto-transform );
   }
   .lineacontacto{
     position: relative;
