--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,10 +19,11 @@
     margin: 0;
     padding-top: 12vh; 
   }
-
-@import 'base/variables';
-@import 'componentes/header';
-@import 'componentes/carousel';
-@import 'componentes/main';
-@import 'componentes/footer';
-@import 'componentes/media';
+@import './base/map-get';
+@import './base/mixin';
+@import './base/variables';
+@import './componentes/header';
+@import './componentes/carousel';
+@import './componentes/main';
+@import './componentes/footer';
+@import './componentes/media';
