--- a/scss/base/_map-get.scss
+++ b/scss/base/_map-get.scss
@@ -1,11 +1,11 @@
 
-$carouselh2: (
-     tamaño-de-fuente: 2rem,
+$carouselh1: (
+     tamanio-de-fuente: 2rem,
      peso-de-fuente: 1000,
 );
 
 $carouselh4: (
-      tamaño-de-fuente: 1.5rem,
+      tamanio-de-fuente: 1.5rem,
       peso-de-fuente: 800,
 );
 
