--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -2,16 +2,12 @@
 -------------------------------------------------- */
 
 @media (min-width: 40em) {
-    .featurette-heading {
+    .titulochapaypint h2 {
       font-size: 50px;
     }
   }
   
   @media (max-width: 992px){
-    .col-lg-4 {
-      flex: 0 0 auto;
-      height: 80%;
-    }
     .llantasdiv h3{
       font-size: 3vw;
     }
@@ -22,8 +18,8 @@
       max-width: 100%;
     }
 
-    .carousel-caption{ 
-      & h2{
+    .carousel-texto{ 
+      & h1{
         font-size: 1.5rem;
         width: 320px;
       }
@@ -34,14 +30,8 @@
   }
   
   @media(max-width:800px){
-    header{
-        padding: 0px 0.5% 0 0.5%;
-    }
-    .cabecera__lista li a{
-        padding: 15px 8px;
-    }
     /* inicio carousel */
-    .carousel-item {
+    .carousel-otro {
       height: 23rem;
 
       & > img {
@@ -52,12 +42,12 @@
         height: 110%; 
       }
     }
-    .carousel-caption {
+    .carousel-texto {
       left: 5%;
       bottom: 1.8rem;
       padding: 0;
 
-      & h2{
+      & h1{
         font-weight: 600;
         margin-bottom: 8rem;
         width: 290px;
@@ -90,7 +80,7 @@
     .fab{
       font-size: 5.5vw;
     }
-    .bi-arrow-up-circle-fill{
+    .flecha1{
       font-size: 5.5vw; 
     }
     .containerSub {
@@ -99,45 +89,8 @@
   }
   
   @media(max-width:600px){
-    /*inicio header */
-      header label{
-          display: initial;
-      }
-      .navbar{
-          position: absolute;
-          top: 100%;
-          left: 0%;
-          right: 0%;
-          background: rgb(33, 33, 33);
-          border-top: 1px solid rgba(255, 255, 255, 0.3);
-          display: none;
-      }
-
-      .cabecera__lista li{
-          width: 100%;
-          border-bottom: 3px solid rgba(255, 0, 0, 0.6);
-          
-      }
-      .cabecera__sublista{
-          position: relative;
-          text-align:left;
-          width: 100%;
-
-        & li{
-          background: rgb(66, 66, 66);;
-        }
-        & li ul{
-          left: 0%;
-          width: 100%;
-        }
-      }
-
-      #menu-bar:checked ~ .navbar{
-          display: initial;
-      }
-  
       /* Inicio carousel */
-      .carousel-item {
+      .carousel-otro {
         height: 15rem;
 
         & > img {
@@ -149,8 +102,8 @@
         }
       }
 
-      .carousel-caption{
-        & h2{
+      .carousel-texto{
+        & h1{
           font-weight: 600;
           font-size: 18px;
           margin-bottom: 3rem;
@@ -199,7 +152,7 @@
       .bi-arrow-up-circle-fill{
         font-size: 7vw; 
       }
-      .h1-responsive{
+      .h2-responsive{
         font-size: 4.5vw;
       }
       .texto{
@@ -211,7 +164,7 @@
       .list-unstyled p{
         font-size: 14px;
       }
-      .newsletter-card {
+      .suscripcion {
         max-width: 450px;
         & h3{
           font-size: 20px;
